--- a/second.html
+++ b/second.html
@@ -33,17 +33,17 @@
 
     <div class="slideshow-container">
       <div class="mySlides fade">
-        <div class="numbertext">1 / 3</div>
+        <div class="numberText">1 / 3</div>
         <img src="images/cara2.jpg" style="width:100%" />
       </div>
 
       <div class="mySlides fade">
-        <div class="numbertext">2 / 3</div>
+        <div class="numberText">2 / 3</div>
         <img src="images/cara1.jpg" style="width:100%" />
       </div>
 
       <div class="mySlides fade">
-        <div class="numbertext">3 / 3</div>
+        <div class="numberText">3 / 3</div>
         <img src="images/cara3.jpg" style="width:100%" />
       </div>
 
